--- a/contato.html
+++ b/contato.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Contato Test Commit</title>
+        <title>Contato</title>
         <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="style.css">
         
