--- a/index.html
+++ b/index.html
@@ -4,40 +4,59 @@
     <head>
         <meta charset="UTF-8">
         <title>Barbearia Alura</title>
-        <link rel="stylesheet" href="style-home.css">
+        <link rel="stylesheet" href="reset.css">
+        <link rel="stylesheet" href="style.css">
 
     </head>
 
     <body>
         <header>
-            <h1 class="tituloprincipal">Barbearia Alura</h1> 
+            <div class="caixa">
+                <h1><img src="img/logo.png"></h1>
+
+                <nav>
+                    <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="produtos.html">Produtos</a></li>
+                    <li><a href="contato.html">Contato</a></li>
+                    </ul>
+                </nav>
+            </div>
         </header>
 
-        <img id="banner" src="img/banner.jpg">
-        <div class="principal">
-            <h2 class="titulocentralizado">Sobre a Barbearia Alura</h2>
+        <img class="banner" src="img/banner.jpg">
 
-            <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
+        <main>
+            <section class="principal">
+                <h2 class="titulo-principal">Sobre a Barbearia Alura</h2>
+
+                <img class="utensilios" src="img/utensilios.jpg" alt="Utensílios de um barbeiro.">
+
+                <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
+            
+                <p id= "missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes".</strong></em></p>
+                <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+            </section>
+
+            <section class="beneficios">
+                <h3 class="titulo-principal">Benefícios</h3>
+
+                <ul>
+                    <li class="itens">Atendimento aos clientes</li>
+                    <li class="itens">Espaço diferenciado</li>
+                    <li class="itens">Localização</li>
+                    <li class="itens">Profissionais qualificados</li>
+                </ul>
+                <img src="img/beneficios.jpg" class="imagembeneficios">
+            </section>
+
+        </main>
+
+        <footer>
+            <img src="img/logo-branco.png">
+            <p class="copyrights">&copy; Copyright Barbearia Alura 2020</p>
+        </footer>
         
-            <p id= "missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes".</strong></em></p>
-            <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
-        </div>
-
-        <div class="beneficios">
-        <h3 class="titulocentralizado">Benefícios</h3>
-
-        <ul>
-            <li class="itens">Atendimento aos clientes</li>
-            <li class="itens">Espaço diferenciado</li>
-            <li class="itens">Localização</li>
-            <li class="itens">Profissionais qualificados</li>
-        </ul>
-        <img src="img/beneficios.jpg" class="imagembeneficios">
-
-
-        </div>
-
-
     </body>
 
 
