--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>Barbearia Alura</title>
         <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat&display=swap">
 
     </head>
 
@@ -38,6 +39,17 @@
                 <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
             </section>
 
+            <section class="mapa">
+                <h3 class="titulo-principal">Nosso estabelecimento</h3>
+                <p>Nosso estabelecimento está localizado no coração da cidade</p>
+
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14625.408024770628!2d-46.634255272346344!3d-23.59170550468
+                3464!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5a2b2ed7f3a1%3A0xab35da2f5ca62674!2sCaelum%20-%20Escola%20de%20T
+                ecnologia!5e0!3m2!1spt-BR!2sbr!4v1591925568225!5m2!1spt-BR!2sbr" width="100%" height="300" frameborder="0" style="border:0;" a
+                llowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+
+            </section>
+
             <section class="beneficios">
                 <h3 class="titulo-principal">Benefícios</h3>
 
@@ -48,6 +60,11 @@
                     <li class="itens">Profissionais qualificados</li>
                 </ul>
                 <img src="img/beneficios.jpg" class="imagembeneficios">
+
+                <div class="video">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY" frameborder="0" allow="accelerometer; aut
+                    oplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
             </section>
 
         </main>
