--- a/produtos.html
+++ b/produtos.html
@@ -6,6 +6,7 @@
         <title> Produtos - Barbearia Alura </title>
         <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat&display=swap">
         
 
     </head>
